--- a/VRChat/13/1254213.html
+++ b/VRChat/13/1254213.html
@@ -69,9 +69,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -101,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Tei6MOKfDMLzD8UUBL8LpzbAxrjk2HOWPEe1+JTzG+s="></script>
+    "USqyTv02UMAUGHSRq78llIB0SbL+jp3Rgw1CJSMWlnQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鹿の角の飾り台","description":"VRChat内での利用を想定したアイテムです。\n\nワールドを作ってみたものの、何かが足りないとお思いの方、鹿の角の飾り台で何かを飾ってみませんか？\n日本刀やスポーツ用品を横たえてみるもよし、アクセサリーを引っ掛けてみるのもよし。\n(※画像内のスポーツ用品やおきゅたんは同梱しておりません)\n\nまた角そのものも左右個別に同梱しております。\n頭につけて即席オノッチコスプレをするのにも最適です。\nあと孫の手代わりとか角ばった武器とかになるかもしれません。\n\nアバターへの利用、ワールドへのアップロードは自由です。\nただし、データの再配布、販売は不可とします。\nまた利用は自己責任とし、トラブルが発生した場合でも一切の責任は負いかねますので、予めご了承ください。\n\n無料版とBOOST版は中身は全く同じです。\nジュースでもおごってやろうか、なんて方がいたらBOOST版もよろしくお願いします。","url":"https://booth.pm/ja/items/1254213","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/a5ee2955-f931-4ee1-9f8c-8ffe0ada05e8/i/1254213/578176e6-11a1-4e98-9f5e-0b81f3e35c63_base_resized.jpg"}
     </script>
@@ -114,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Tei6MOKfDMLzD8UUBL8LpzbAxrjk2HOWPEe1+JTzG+s="></script>
+    nonce="USqyTv02UMAUGHSRq78llIB0SbL+jp3Rgw1CJSMWlnQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -152,7 +151,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -193,7 +193,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1254213/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -208,14 +208,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1254213/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
