--- a/VRChat/24/1253924.html
+++ b/VRChat/24/1253924.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HhhwJY3rjxbBB06AQCoVpW5fSSLieyJyuHLnATxqMMU="></script>
+    "6qAJzE5Imqle3dSOhKMCKou/MMQKm+oDwq5bA8SK6OM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3D逆関節陸戦メカモデル[MB-G-30]","description":"□オリジナル3Dメカモデル　MB-G-30\n製作者：サークル麻婆弾　ヴィジ(ap1895)\n18904△ポリゴン。(Ver1.0)\nunityHumanoid対応。\n\n□内容\n・MB-G-30E.unitypackage　本体\n\n・MB-G-30E.fbx　本体\n\n・Averina_Avatar.vrm VRM本体\n\n・texフォルダ　テクスチャ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートして下さい。\n\nunitypackage版をインポートする際は、UnityChanToonShader2.0.5及びVRCSDKの最新版を予めプロジェクトにインポートした上で\n本アバターのunitypackageをインポートして下さい。\nDynamicBoneを使用する場合は同様に事前にインポートを行って下さい。\n\nunityにインポート後のファイルはAsset/MBG30フォルダ内に生成されます。\n\n\n\n\n□利用規約\n\n・本モデルデータの著作権は製作者ヴィジに帰属します。\n\n・改変・改造は自由に可能です。R-18/R-18Gも可。\n\n・政治的、宗教的、誹謗中傷目的での利用を禁じます。\n\n・元モデルデータ、改変データを再配布・再利用可能な状態で公開する事を禁じます。\n\n・VRCなどのプラットフォーム上にて、アバターペデスタル等の購入者以外の不特定多数が利用できる状態や、public設定でのアバターアップロードを禁じます。\n\n・本モデルの購入者は営利活動での利用が可能です。\n\n・本モデルの利用によるトラブル・損失等に製作者は一切の責任を負いません。\n\n\n□更新履歴\n\n2019/3/01　販売開始\n\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nVRChat：AP1895\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/1253924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1253924/4e51f5e3-5a82-45fc-9526-ea5adf4fec8a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HhhwJY3rjxbBB06AQCoVpW5fSSLieyJyuHLnATxqMMU="></script>
+    nonce="6qAJzE5Imqle3dSOhKMCKou/MMQKm+oDwq5bA8SK6OM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1253924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1253924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
