--- a/VRChat/28/1253628.html
+++ b/VRChat/28/1253628.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KgJh+dwDNeQUotP/JjWxSBgSDJO5rx+O5eidih1sinE="></script>
+    "qQZeX9PvzxCApBwJpogIAMFXkDyCToJIDkn80gY9dTY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「男の娘 エリアス」","description":"【Unity2018環境での動作確認しています。】\n※本モデルはVRCSDK2のセットアップがされています。\n\n活発な男の娘です。\nボーイッシュから可愛いまでお好みでどうぞ！\n服は光ったりします。\n\n【現在VRCの仕様変更で当アバターのPerformanceRankはPoorになっています】\n\n※表情について\nこのモデルは、リップシンクやアイトラッキングと表情が干渉しないように通常顔と表情顔が別のメッシュになっています。\n仕組みとしては、リップシンク・アイトラッキング用の「Body」メッシュをオーバーライド使用時に消してるだけです。\nシェイプキーだけのモデルとは違い一瞬だけメッシュが重なる瞬間がありますのでご了承ください。\n\nこのモデルには21種類の作成済み表情とその素材のシェイプキー31種類、リップシンク用15種類、アイトラッキング用4種が用意されています。\n「表情」メッシュはリップシンク等と干渉しないので全71種を組み合せてオリジナル表情を作ることが出来ます。\n\n※アニメーションオーバーライドについて\n　デフォルトはこちらで設定したものを使用しています。\n　ROCKNROLLの位置にはthreefingerという自作アニメーションオーバーライドが入っているのでROCKNROLL狂信者は自分で導入してください。\n\n※フルボディトラッキングについて\n一応は対応を謳ってますが、製作者がフルトラ環境ではない為、完全なサポートは現状出来ません。\n報告を頂ければ出来る範囲で修正を行う予定です。\nフルトラ環境になったら、完全サポートを行う予定です。\n\n【利用規約】\n本データを購入した時点で本利用規約に同意したとみなします。\nまた、本利用規約の内容は予告なく変更する場合があり、最新のものが適用されます。\n下記規約を確認の上、ご自由にお使いください。\n\n◆「PS-101 Elias【男の娘　エリアス】」（以下、本データ）の著作権は姫乃ちはるに帰属します。\nまた、改変データや3Dモデルの一部のみでも著作権は姫乃ちはるに帰属するものとします。\n\n◆本利用規約において、日本語の利用規約を適用するものといたします。\n\n◆禁止事項\n・本データの再配布禁止。\n　本商品に付属する全てのデータ（再配布可能なReflex Shaderを除く）の再配布・販売は改変の有無を問わず禁止します。（注1）\n　なお、VRChatやバーチャルキャスト等で利用する為のデータアップロードはこれに該当しません。\n　また、アバターペデスタル等の購入者以外でも利用することが出来る状態にする事を禁止します。\n・作者を偽る行為の禁止。\n・特定個人や団体への誹謗中傷を目的とした利用の禁止。\n\n（注1）改変依頼について\n改変依頼の発注者と受注者の両方が本データを購入している、かつ個人間の依頼場合のみ、改変した本データの両者間でのやり取りを許可します。\n第三者や不特定多数に向けた改変データの再配布、販売は禁止です。\n\n◆利用可能\n・データ改変、使用。\n・商用動画等の利用。\n・本データ、改変データを使用したバーチャルYoutuber活動、同人誌の頒布等での利用。\n　（収益の有無を問いませんが、上記の通りデータ再頒布は不可ですのでお気を付けください）\n・R-18、R-18G等での使用。\n　（ゾーニングはきっちり行ってください）\n・VRChat、Vワールド、バーチャルキャスト等での使用。\n・自作ゲーム等での利用。\n\n【免責事項】\n・同梱フレーバーテキストに登場する人物・団体・名称・企業等は架空であり、実在のものとは関係ありません。\n・本データに起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について一切負わないものとします。\n\n更新履歴\n2019/06/04　一部ファイル名を修正。モデル等には変更なし。\n2020/07/16　価格改定　リメイク版発売までこの価格です","url":"https://booth.pm/ja/items/1253628","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/1703feb1-3834-4bc6-959f-543e3e223494/i/1253628/a8aed7d9-06fe-42ac-bb1b-024dda67ffac_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KgJh+dwDNeQUotP/JjWxSBgSDJO5rx+O5eidih1sinE="></script>
+    nonce="qQZeX9PvzxCApBwJpogIAMFXkDyCToJIDkn80gY9dTY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1253628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1253628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
