--- a/VRChat/10/1252510.html
+++ b/VRChat/10/1252510.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "swPKo0aXZJ3B6MVh1TXAceQgc9kpWANekRvl4MfL/e0="></script>
+    "9nKrGvBgrWsjfuugyStnOb5Bwbn9Ts6y37fDSll/8gg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】8inch 357Mag Revolver","description":"主にVRChat向けとして使用できる8インチ銃身のリボルバーです。\nVRChat以外の動画作品･ゲーム等での利用も可能です。\n\nこのモデルは「ガンスリンガー・ドロシー」に付属しているものと同一です\nhttps://tsutsuji815.booth.pm/items/1252507","url":"https://booth.pm/ja/items/1252510","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/1252510/e1fa9ec4-f290-47e8-9617-59d6f4472455_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="swPKo0aXZJ3B6MVh1TXAceQgc9kpWANekRvl4MfL/e0="></script>
+    nonce="9nKrGvBgrWsjfuugyStnOb5Bwbn9Ts6y37fDSll/8gg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1252510/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               424
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1252510/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               424
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
