--- a/VRChat/71/1248371.html
+++ b/VRChat/71/1248371.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NcxzrVkdHgdXGZz0D8R9GXJF4swhBDf2Kl8kHN9dCMI="></script>
+    "6Y7AqujiD6d3smgeJv6e/2p1k8eOj2ANksLnRMFRjnc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCHAT Profile Generator","description":"アバターの プロフィールの作業を自動でセッティングしてくれるプラグイン です\n\nJJY-Profile Generatorメニューで使うことができます。\n\nカメラとイメージを入れて \"Generate Profile\"ボタンを押すとVRCHATサムネイル規格に合わせてQuadを生成し,カメラをセットします。\nカメラの場合 アップロード画面の状態では VRCCamを自動選択し,それ以外はユーザが直接カメラを指定しなければなりません。\n\nあと, Quadオブジェクトが複数ある場合 選択されてる Quadオブジェクトの情報を読み込み 編集できます\n\n無料版と100円版の差はないので お気をつけてください!\n\nTwitter: https://twitter.com/JJY_VRCHAT","url":"https://booth.pm/ja/items/1248371","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8429a542-3ffd-40a9-85af-b9354940c51b/i/1248371/606dd18a-21c6-4375-bfb6-5c6d0c840dd7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NcxzrVkdHgdXGZz0D8R9GXJF4swhBDf2Kl8kHN9dCMI="></script>
+    nonce="6Y7AqujiD6d3smgeJv6e/2p1k8eOj2ANksLnRMFRjnc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1248371/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              601
+                              603
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1248371/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              601
+                              603
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
