--- a/VRChat/48/1248248.html
+++ b/VRChat/48/1248248.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Wa2PmKLlc9b4Npjbh4bTCibY7HstjazIaV+xYZhvhA8="></script>
+    "2d/D6xFhS3ouUEuv8hSqtBzZ4Ow/J/zwg/5EHk7/S6g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料配布】小さい舌","description":"VRC用アバター専用の舌です。\nデフォルトの大きさから0.75ぐらいに調整したアバターに合わせてPrepab化されております。\n\n\n入れ方\n\nアバターのHeadのBoneに入れて口の中に入れ、Offにしておきます。\n出したい表情のanimationでOnにして前にだして角度を調整します。\nアバターによってScaleやTextureを調整する必要があります。\n\n*販売VRCアバターミルクちゃん用で作られておりますが他のアバターでも使えます。\nhttps://booth.pm/ko/items/1209496\n\n*無料版とBoost版の違いはありません。\n*改造自由\n*再配布、制作自己主張はおやめください。","url":"https://booth.pm/ja/items/1248248","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c8c6e1b2-84b4-4743-9383-98bec6ad8fbf/i/1248248/2606a4b6-4053-4d83-8b0f-fafff6e79b58_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Wa2PmKLlc9b4Npjbh4bTCibY7HstjazIaV+xYZhvhA8="></script>
+    nonce="2d/D6xFhS3ouUEuv8hSqtBzZ4Ow/J/zwg/5EHk7/S6g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1248248/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               570
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1248248/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               570
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
